[BUGFIX] Fix word wrapping for long confval titles

--- a/packages/typo3-docs-theme/assets/sass/components/directives/_confval.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/directives/_confval.scss
@@ -15,6 +15,8 @@ dl.confval {
         margin-bottom: .75em;
         code {
             color: color-contrast($light);
+            word-wrap: anywhere;
+            white-space: normal;
         }
     }
     & > dd {
